# blazingdb-protocol

./: .gitignore  .project  README.md  build.sh  build_libraries.sh  run_all_mock_services.sh  run_calcite_mock.sh  run_orchestrator_mock.sh  run_ral_mock.sh  test_libraries.sh
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cpp/cmake/Modules/: ConfigureFlatBuffers.cmake  ConfigureGoogleTest.cmake  ConfigureZeroMQ.cmake
cpp/cmake/Templates/: GoogleTest.CMakeLists.txt.cmake
cpp/examples/: CMakeLists.txt
cpp/examples/cmake/Templates/: BlazingDBProtocol.CMakeLists.txt.cmake  ZeroMQ.CMakeLists.txt.cmake
cpp/examples/src/: client-example.cpp  ipc_numba.cu  ipc_py.cu  messages.h  server-example.cpp  table_group-demo.cc
cpp/examples/src/api/: client-test.cpp  server-test.cpp
cpp/examples/src/gdf/: GDFColumn.cuh  GDFCounter.cuh  gdf.h  libgdf.h
cpp/examples/src/gdf/container/: gdf_vector.cuh  host_table.h
cpp/examples/src/gdf/util/: bits.cuh  gdf_utils.cuh
cpp/examples/src/interpreter/: interpreter-client.cc  interpreter-messages.h  interpreter-server.cc
cpp/examples/src/io/: server-test.cpp
cpp/examples/src/orchestrator-service/: calcite-client.h  orchestator-service.cc  orchestator-service.cu  orchestrator-server.h  ral-client.cc  ral-client.cu  ral-client.cuh  ral-client.h
cpp/examples/src/ral-service/: ral-server.cc  ral-server.cu
cpp/include/protocol/: api.h  config.h
cpp/src/: CMakeLists.txt
cpp/src/blazingdb/protocol/: CMakeLists.txt  api.h  messages.h  server-test.cc
cpp/src/blazingdb/protocol/authorization/: messages.h
cpp/src/blazingdb/protocol/buffer/: buffer.h
cpp/src/blazingdb/protocol/calcite/: errors.h  messages.h
cpp/src/blazingdb/protocol/calcite/dto/: CMakeLists.txt  LogicalPlan.h
cpp/src/blazingdb/protocol/calcite/dto/base/: RexBase.h  RexCall.cpp  RexCall.h  RexFactory.cpp  RexFactory.h  RexNode.cpp  RexNode.h
cpp/src/blazingdb/protocol/calcite/dto/rel/: RelExp.h
cpp/src/blazingdb/protocol/calcite/dto/rel/base/: RelBase.h  RelNode.cpp  RelNode.h
cpp/src/blazingdb/protocol/calcite/dto/rel/factory/: RelFactory.cpp  RelFactory.h
cpp/src/blazingdb/protocol/calcite/dto/rel/node/: LogicalAggregate.cpp  LogicalAggregate.h  LogicalFilter.cpp  LogicalFilter.h  LogicalProject.cpp  LogicalProject.h  LogicalUnion.cpp  LogicalUnion.h  Nodes.h  RelFactory.cpp  RelFactory.h  TableScan.cpp  TableScan.h
cpp/src/blazingdb/protocol/calcite/dto/rel/visitor/: RelVisitable.h  RelVisitor.h
cpp/src/blazingdb/protocol/calcite/dto/rex/base/: KindName.h  RexBase.h  RexCall.cpp  RexCall.h  RexData.cpp  RexData.h  RexFactory.cpp  RexFactory.h  RexNode.cpp  RexNode.h  TypeName.h
cpp/src/blazingdb/protocol/calcite/dto/rex/factory/: RexFactory.cpp  RexFactory.h
cpp/src/blazingdb/protocol/calcite/dto/rex/node/: Call.cpp  Call.h  CorrelVariable.cpp  CorrelVariable.h  DynamicParam.cpp  DynamicParam.h  FieldAccess.cpp  FieldAccess.h  InputRef.cpp  InputRef.h  Literal.cpp  Literal.h  LocalRef.cpp  LocalRef.h  Nodes.h  Over.cpp  Over.h  PatternFieldRef.cpp  PatternFieldRef.h  RangeRef.cpp  RangeRef.h  SubQuery.cpp  SubQuery.h  TableInputRef.cpp  TableInputRef.h  Variable.cpp  Variable.h
cpp/src/blazingdb/protocol/calcite/dto/rex/visitor/: RexVisitable.h  RexVisitor.h
cpp/src/blazingdb/protocol/calcite/dto/visitor/: Visitor.cpp  Visitor.h
cpp/src/blazingdb/protocol/calcite/flatbuffers/: RelNodeBuilder.cpp  RelNodeBuilder.hpp
cpp/src/blazingdb/protocol/calcite/messages/: RelNodeBuilder.cpp  RelNodeBuilder.hpp
cpp/src/blazingdb/protocol/client/: client.cc  client.h
cpp/src/blazingdb/protocol/connection/: connection.cc  connection.h  tcp_connection.cc  tcp_connection.h  unix_socket_connection.cc  unix_socket_connection.h
cpp/src/blazingdb/protocol/interpreter/: messages.h
cpp/src/blazingdb/protocol/message/: errors.h  messages.cpp  messages.h  utils.h
cpp/src/blazingdb/protocol/message/calcite/: errors.h  messages.h
cpp/src/blazingdb/protocol/message/interpreter/: dto.cuh  errors.h  gdf_dto.h  messages.cpp  messages.cuh  messages.h  utils.cpp  utils.h
cpp/src/blazingdb/protocol/message/io/: errors.h  file_system.cpp  file_system.h  messages.h
cpp/src/blazingdb/protocol/message/orchestrator/: messages.cpp  messages.h
cpp/src/blazingdb/protocol/orchestrator/: messages.h
cpp/src/blazingdb/protocol/server/: server.cc  server.h
cpp/src/blazingdb/protocol/utilities/: io_util.cc  io_util.h
cpp/src/protocol/: MessageBuilder.cpp  MessageBuilder.h  api.h
cpp/tests/: CMakeLists.txt
cpp/tests/api/: client-test.cpp  server-test.cpp
cpp/tests/calcite/: CMakeLists.txt  RelNodeBuilderTest.cpp  utils.cpp  utils.hpp
cpp/tests/calcite/dto/: CMakeLists.txt  LogicalPlanTest.cpp  MockRelVisitor.h  MockRexVisitor.h
cpp/tests/filesystem-messages/: CMakeLists.txt  dml-request.cpp
cpp/tests/foo-sample/: CMakeLists.txt  foo_sample-test.cpp
cpp/tests/plan-tree/: CMakeLists.txt  plan-tree-test.cc  tree_generated.h
integration/: build.sh  clean.sh  run.sh
integration/calcite-service/: dependency-reduced-pom.xml  (+1 more)
integration/orchestrator-client/: CMakeLists.txt
integration/orchestrator-client/cmake/Modules/: BuildFlatBuffers.cmake  ConfigureGoogleTest.cmake
integration/orchestrator-client/src/: blazingdb-orchestator.cc
integration/services/cpp/: CMakeLists.txt
integration/services/cpp/cmake/Modules/: ConfigureBlazingDBProcotol.cmake
integration/services/cpp/src/gdf/: GDFCounter.cuh
integration/services/cpp/src/orchestrator-service/: calcite-client.h  orchestator-service.cc  orchestator-service.cu  ral-client.cc  ral-client.cu  ral-client.cuh  ral-client.h
integration/services/cpp/src/ral-service/: ral-server.cc
integration/services/ral-service/: CMakeLists.txt  ral-server.cc
integration/services/ral-service/src/: ral-server.cc
java/: .project  pom.xml
messages/: BlazingMetadata.fbs  QueryMessage.fbs  QueryResult.fbs  all.fbs  cudaIpcMemHandle_t.fbs  gdf_column.fbs  gdf_dtype.fbs  gdf_dtype_extra_info.fbs  gdf_time_unit.fbs  protocol.fbs  tree.fbs
python/: client.py  server.py  setup.py
(+270 files in other folders)
